--- a/services/angularjs/domApi.html
+++ b/services/angularjs/domApi.html
@@ -7,35 +7,21 @@
         <link href="bootstrap-theme.css" rel="stylesheet" />
         <script>
             angular.module("exampleApp", [])
-            .config(function($locationProvider) {
-                if (window.history&& history.pushState) {
-                    $locationProvider.html5Mode(true);
-                }
+            .config(function ($anchorScrollProvider) {
+                $anchorScrollProvider.disableAutoScrolling();
             })
-            .controller("defaultCtrl", function ($scope, $location) {
-                $scope.$on("$locationChangeSuccess", function (event, newUrl) {
-                    $scope.url = newUrl;
-                });
+            .controller("defaultCtrl", function ($scope, $location, $anchorScroll) {
+                $scope.itemCount = 50;
+                $scope.items = [];
 
-                $scope.setUrl = function (component) {
-                    switch (component) {
-                        case "reset":
-                            $location.path("");
-                            $location.hash("");
-                            $location.search("");
-                            break;
-                        case "path":
-                            $location.path("/cities/london");
-                            break;
-                        case "hash":
-                            $location.hash("north");
-                            break;
-                        case "search":
-                            $location.search("select", "hotels");
-                            break;
-                        case "url":
-                            $location.url("/cities/london?select=hotels#north");
-                            break;
+                for (var i = 0; i < $scope.itemCount; i++) {
+                    $scope.items[i] = "item " + i;
+                }
+
+                $scope.show = function(id) {
+                    $location.hash(id);
+                    if (id == "bottom") {
+                        $anchorScroll();
                     }
                 }
             });
@@ -45,15 +31,16 @@
         <div class="panel panel-default">
             <h4 class="panel-heading">URL</h4>
             <div class="panel-body">
-                <p>The URL is: {{url}}</p>
-                <div class="btn-group ">
-                    <button class="btn btn-primary" ng-click="setUrl('reset')">Reset</button>
-                    <button class="btn btn-primary" ng-click="setUrl('path')">Path</button>
-                    <button class="btn btn-primary" ng-click="setUrl('hash')">Hash</button>
-                    <button class="btn btn-primary"
-                         ng-click="setUrl('search')">Search</button>
-                    <button class="btn btn-primary" ng-click="setUrl('url')">URL</button>
-                </div>
+                <p id="top">This is the top</p>
+                <button class="btn btn-primary" ng-click="show('bottom')">
+                    Go to Bottom</button>
+                <p>
+                    <ul>
+                        <li ng-repeat="item in items">{{item}}</li>
+                    </ul>
+                </p>
+                <p id="bottom">This is the bottom</p>
+                <button class="btn btn-primary" ng-click="show('top')">Go to Top</button>
             </div>
         </div>
     </body>
